2001-03-12  Keisuke Nishida  <kxn30@po.cwru.edu>

	* guile-c.el (guile-c-deprecate-region): New command.

2001-03-11  Keisuke Nishida  <kxn30@po.cwru.edu>

	* guile-c.el: New file.

2000-05-28  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* ppexpand.el: New file.

2000-01-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* multistring.el: New file.